--- a/src/Assets/Article/Locale/ru/Entity.json
+++ b/src/Assets/Article/Locale/ru/Entity.json
@@ -4,7 +4,7 @@
     "Create": "Создать статью",
     "Slug": "ЧПУ",
     "Keywords": "Ключевые слова",
-    "Description": "Описание",
+    "Summary": "Сводка",
     "Tags": "Теги",
     "Empty": "Статей нет",
     "SEO": {
