Control Panel Fixes.

--- a/src/Assets/Session/Locale/ru/Entity.json
+++ b/src/Assets/Session/Locale/ru/Entity.json
@@ -1,5 +1,6 @@
 {
     "Channel": "Канал",
+    "Subchannel": "Субканал",
     "Created": "Создана",
     "Empty": "Сессий нет",
     "Expire": "Срок действия",
