--- a/src/Assets/Block/Locale/ru/Control.json
+++ b/src/Assets/Block/Locale/ru/Control.json
@@ -1,12 +1,13 @@
 {
-    "Title": "Блоки",
-    "Options":
-    {
+    "Options": {
         "Do": "Обзор",
         "List": "Список блоков",
         "Create": "Создать блок",
         "Show": "Просмотреть",
         "Update": "Редактировать",
         "Delete": "Удалить"
-    }
+    },
+    "Title": "Блоки",
+    "Today": "Блоков сегодня",
+    "Total": "Блоков всего"
 }
