--- a/src/Assets/Company/Locale/ru/Entity.json
+++ b/src/Assets/Company/Locale/ru/Entity.json
@@ -1,47 +1,53 @@
 {
     "Company": {
-        "Type": {
-            "IE": "Индивидуальный предприниматель",
-            "LLC": "Общество с ограниченной ответственностью",
-            "CJSC": "Закрытое акционерное общество",
-            "OJSC": "Открытое акционерное общество",
-            "FSUE": "Федеральное государственное унитарное предприятие",
-            "SUE": "Государственное унитарное предприятие",
-            "MUE": "Муниципальное унитарное предприятие",
-            "FP": "Полное товарищество",
-            "LP": "Товарищество с ограниченной ответственностью",
-            "PC": "Производственный кооператив"
-        },
-        "Title": "Юридическое наименование",
-        "INN": "ИНН",
-        "OGRN": "ОГРН",
-        "KPP": "КПП",
-        "Director": {
-            "Label": "Единоличный исполнительный орган",
-            "Name": "Имя ЕИО",
-            "Position": "Должность ЕИО",
-            "Reason": "Основание полномочий ЕИО",
-            "Genitive": {
-                "Name": "Имя ЕИО в родительном падеже",
-                "Position": "Должность ЕИО в родительном падеже",
-                "Reason": "Основание полномочий ЕИО в родительном падеже"
+        "Russia":
+        {
+            "Title": "Юридическое наименование",
+            "Type": {
+                "Label": "Организационно-правовая форма",
+                "IE": "Индивидуальный предприниматель",
+                "LLC": "Общество с ограниченной ответственностью",
+                "CJSC": "Закрытое акционерное общество",
+                "OJSC": "Открытое акционерное общество",
+                "FSUE": "Федеральное государственное унитарное предприятие",
+                "SUE": "Государственное унитарное предприятие",
+                "MUE": "Муниципальное унитарное предприятие",
+                "FP": "Полное товарищество",
+                "LP": "Товарищество с ограниченной ответственностью",
+                "PC": "Производственный кооператив"
+            },
+            "INN": "ИНН",
+            "OGRN": "ОГРН",
+            "KPP": "КПП",
+            "Director": {
+                "Label": "Единоличный исполнительный орган",
+                "Name": "Имя ЕИО",
+                "Position": "Должность ЕИО",
+                "Reason": "Основание полномочий ЕИО",
+                "Genitive": {
+                    "Name": "Имя ЕИО в родительном падеже",
+                    "Position": "Должность ЕИО в родительном падеже",
+                    "Reason": "Основание полномочий ЕИО в родительном падеже"
+                }
+            },
+            "Accountant": "Главный бухгалтер",
+            "Taxes":
+            {
+                "Label": "Система налогообложения",
+                "General": "Общая система налогообложения",
+                "Simplified-6": "Упрощённая система налогообложения (6%)",
+                "Simplified-15": "Упрощённая система налогообложения (15%)",
+                "Unified": "Единый налог на вменённую прибыль",
+                "Agricultural": "Единый сельскохозяйственный налог"
             }
         },
-        "Accountant": "Главный бухгалтер",
+
         "Address": {
             "Official": "Юридический адрес",
             "Real": "Фактический адрес",
             "Postal": "Почтовый адрес"
         },
         "Industry": "Виды деятельности",
-        "Taxes": {
-            "Label": "Система налогообложения",
-            "General": "Общая система налогообложения",
-            "Simplified-6": "Упрощённая система налогообложения (6%)",
-            "Simplified-15": "Упрощённая система налогообложения (15%)",
-            "Unified": "Единый налог на вменённую прибыль",
-            "Agricultural": "Единый сельскохозяйственный налог"
-        },
         "Bank": {
             "Account": {
                 "Correspondent": "Корреспондентский счёт",
