--- a/src/Assets/Company/Locale/ru/Entity.json
+++ b/src/Assets/Company/Locale/ru/Entity.json
@@ -58,7 +58,7 @@
     "Since": "Основана",
     "EMail": "Электронная почта",
     "Entity": "Компания",
-    "Logo": "Логотип",
+    "Photo": "Логотип",
     "Mission": "Миссия компании",
     "Tagline": "Слоган",
     "About": "О компании",
