Add Company.Social.Odnoklassniki field

--- a/src/Assets/Company/Locale/ru/Entity.json
+++ b/src/Assets/Company/Locale/ru/Entity.json
@@ -75,7 +75,8 @@
         "Twitter": "Twitter",
         "VKontakte": "VKontakte",
         "Google": "Google",
-        "Tumblr": "Tumblr"
+        "Tumblr": "Tumblr",
+        "Odnoklassniki": "Odnoklassniki"
     },
     "DUNS": "DUNS",
     "Title": "Публичное название"
