New widgets. Fixes.

--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -16,6 +16,7 @@
     "Tag": "Тег",
     "Tags": "Теги",
     "Title": "Заголовок",
+    "Photo": "Фотография",
     "Subtitle": "Подзаголовок",
     "Published": "Опубликовать"
 }
