--- a/src/Assets/Block/Locale/ru/Control.json
+++ b/src/Assets/Block/Locale/ru/Control.json
@@ -1,4 +1,6 @@
 {
+    "Hour": "За час",
+    "Minute": "За минуту",
     "Options": {
         "Do": "Обзор",
         "List": "Список блоков",
@@ -7,6 +9,7 @@
         "Update": "Редактировать",
         "Delete": "Удалить"
     },
+    "Second": "За секунду",
     "Title": "Блоки",
     "Today": "Блоков сегодня",
     "Total": "Блоков всего"
