--- a/src/Assets/Article/Locale/ru/Entity.json
+++ b/src/Assets/Article/Locale/ru/Entity.json
@@ -3,6 +3,7 @@
     "Body":"Текст",
     "Create": "Создать статью",
     "Slug": "ЧПУ",
+    "Photo": "Фотография к статье",
     "Keywords": "Ключевые слова",
     "Summary": "Сводка",
     "Tags": "Теги",
