--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -1,7 +1,7 @@
 {
-    "Title": "Статьи",
-    "Options":
-    {
+    "Hour": "За час",
+    "Minute": "За минуту",
+    "Options": {
         "Do": "Обзор",
         "List": "Список статей",
         "Create": "Создать статью",
@@ -10,6 +10,8 @@
         "Delete": "Удалить",
         "Order": "Заказать"
     },
+    "Second": "За секунду",
+    "Title": "Статьи",
     "Today": "Статей сегодня",
     "Total": "Всего статей"
 }
