--- a/src/Assets/Article/Locale/ru/Entity.json
+++ b/src/Assets/Article/Locale/ru/Entity.json
@@ -8,7 +8,8 @@
     "Summary": "Сводка",
     "Tags": "Теги",
     "Empty": "Статей нет",
-    "SEO": {
+    "SEO":
+    {
         "Keywords": "Ключевые слова",
         "Title": "SEO Заголовок",
         "Description": "SEO Описание"
