--- a/src/Assets/Photo/Locale/ru/Entity.json
+++ b/src/Assets/Photo/Locale/ru/Entity.json
@@ -2,5 +2,6 @@
     "Title": "Заголовок",
     "Description": "Описание",
     "Image": "Изображение",
-    "Tags": "Теги"
+    "Tags": "Теги",
+    "Priority": "Приоритет"
 }
