Bootstrap 3.3.5 Search Query Application

--- a/src/Assets/Search/Query/Locale/ru/Entity.json
+++ b/src/Assets/Search/Query/Locale/ru/Entity.json
@@ -1,3 +1,9 @@
 {
-    "List.Title": "Поисковые запросы"
+    "Count": "Запросов",
+    "Hits": {
+        "All": "Ответов"
+    },
+    "List.Title": "Поисковые запросы",
+    "Modified": "По дате",
+    "Query": "По запросу"
 }
