--- a/src/Assets/Formats/Locale/ru/Period.json
+++ b/src/Assets/Formats/Locale/ru/Period.json
@@ -48,7 +48,8 @@
         "9": "месяцев",
         "10": "месяцев",
         "11": "месяцев",
-        "12": "месяцев"
+        "12": "месяцев",
+        "13": "месяцев"
     },
     "Day": {
         "0": "дней",
