--- a/src/Assets/User/Locale/en/Entity.json
+++ b/src/Assets/User/Locale/en/Entity.json
@@ -11,5 +11,11 @@
     },
     "Language": "Language",
     "Phone": "Phone number",
-    "Photo": "Photo"
+    "Photo": "Photo",
+    "Password":
+    {
+        "First": "Password",
+        "Second": "Again",
+        "Equal": "Passwords must match"
+    }
 }
