--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -27,7 +27,8 @@
     "Password":
     {
         "First": "Пароль",
-        "Second": "Пароль ещё раз"
+        "Second": "Пароль ещё раз",
+        "Equal": "Пароли должны совпадать"
     },
     "Status":
     {
