--- a/src/Assets/Metric/Locale/ru/Control.json
+++ b/src/Assets/Metric/Locale/ru/Control.json
@@ -1,7 +1,8 @@
 {
     "Options": {
-        "Do": "Обзор"
+        "Do": "Обзор",
+        "Collect": "Собрать",
+        "Plot": "График"
     },
-    "Options.Plot": "График",
     "Title": "Метрики"
 }
