--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -1,9 +1,7 @@
 {
-    "Title": "Пользователи",
-    "Total": "Всего",
-    "Today": "Регистраций сегодня",
-    "Options":
-    {
+    "Hour": "За час",
+    "Minute": "За минуту",
+    "Options": {
         "Do": "Обзор",
         "List": "Список пользователей",
         "Create": "Создать",
@@ -15,5 +13,8 @@
         "RAW": "Просмотреть в сыром виде",
         "Password": "Сменить пароль",
         "Correct": "Исправить"
-    }
+    },
+    "Title": "Пользователи",
+    "Today": "Регистраций сегодня",
+    "Total": "Всего"
 }
