--- a/src/Assets/Control/Locale/ru/Panel.json
+++ b/src/Assets/Control/Locale/ru/Panel.json
@@ -1,5 +1,6 @@
 {
     "Group": {
+        "Ad": "Реклама",
         "Project": "Проект",
         "Platform": "Платформа",
         "Developer": "Разработчик",
