Fix forgot password page localization

--- a/src/Assets/User/Locale/en/Reset.json
+++ b/src/Assets/User/Locale/en/Reset.json
@@ -1,3 +1,6 @@
 {
-    "Title": "Forgot password"
+    "Title": "Forgot password?",
+    "Subtitle": "Password reset",
+    "EMail": "EMail",
+    "Reset": "Reset"
 }
