--- a/src/Assets/User/Locale/ru/Reset.json
+++ b/src/Assets/User/Locale/ru/Reset.json
@@ -1,3 +1,6 @@
 {
-    "Title": "Забыли пароль?"
+    "Title": "Забыли пароль?",
+    "Subtitle": "Восстановление пароля",
+    "EMail": "EMail",
+    "Reset": "Сбросить"
 }
