--- a/src/Assets/Entity/Locale/ru/Delete.json
+++ b/src/Assets/Entity/Locale/ru/Delete.json
@@ -1,4 +1,8 @@
 {
     "Confirm": "Подтвердите удаление",
-    "Warning.All": "Будут удалены все объекты!"
+    "Warning": {
+        "All": "Будут удалены все объекты!"
+    },
+    "Ok": "Удалить",
+    "Cancel" : "Я передумал"
 }
