--- a/src/Assets/User/Locale/en/Reset.json
+++ b/src/Assets/User/Locale/en/Reset.json
@@ -1,6 +1,6 @@
 {
     "Title": "Forgot password?",
     "Subtitle": "Password reset",
-    "EMail": "EMail",
+    "EMail": "Email",
     "Reset": "Reset"
 }
