--- a/src/Assets/User/Locale/ru/Reset.json
+++ b/src/Assets/User/Locale/ru/Reset.json
@@ -1,6 +1,6 @@
 {
     "Title": "Забыли пароль?",
     "Subtitle": "Восстановление пароля",
-    "EMail": "EMail",
+    "EMail": "Email",
     "Reset": "Сбросить"
 }
