--- a/src/Assets/User/Locale/ru/Reset.json
+++ b/src/Assets/User/Locale/ru/Reset.json
@@ -1,6 +1,8 @@
 {
-    "Title": "Забыли пароль?",
+    "Title":    "Забыли пароль?",
     "Subtitle": "Восстановление пароля",
-    "EMail": "Email",
-    "Reset": "Сбросить"
+    "EMail":    "Email",
+    "Reset":    "Сбросить",
+    "Success":  "Письмо с новым паролем отправлено на ваш email.",
+    "404":      "Пользователь с таким email не найден."
 }
