Entity validation fix. Localization fix

--- a/src/Assets/User/Locale/en/Control.json
+++ b/src/Assets/User/Locale/en/Control.json
@@ -2,6 +2,7 @@
     "Options":
     {
         "Update": "Update profile",
+        "Delete": "Delete",
         "RAW": "RAW View"
     },
     "Title": "User"
