Entity notification fix

--- a/src/Assets/User/Locale/en/Update.json
+++ b/src/Assets/User/Locale/en/Update.json
@@ -1,4 +1,4 @@
 {
-    "Title": "Update profile",
-    "Saved": "User data has been successfully updated at"
+    "Title":    "Update profile",
+    "Success":  "User data has been successfully updated."
 }
