--- a/src/Assets/User/Locale/ru/Create.json
+++ b/src/Assets/User/Locale/ru/Create.json
@@ -1,4 +1,5 @@
 {
-    "Title": "Регистрация",
+    "Title":    "Регистрация",
+    "Success":  "Регистрация завершена",
     "Finished": "Регистрация завершена"
 }
