--- a/src/Assets/User/Locale/ru/Update.json
+++ b/src/Assets/User/Locale/ru/Update.json
@@ -1,4 +1,4 @@
 {
-    "Title": "Редактировать",
-    "Saved": "Данные пользователя были успешно изменены "
+    "Title":    "Редактировать",
+    "Success":  "Данные пользователя были успешно изменены."
 }
