--- a/src/Assets/User/Locale/ru/Error.json
+++ b/src/Assets/User/Locale/ru/Error.json
@@ -1,16 +1,16 @@
 {
     "ID":
     {
-        "Unique":"ID занят"
+        "Unique": "ID занят"
     },
     "EMail":
     {
-        "Unique": "Почтовый ящик занят",
+        "Unique":   "Указанный email уже занят",
         "Required": "Email обязателен к заполнению"
     },
     "Password":
     {
-        "Required":"Укажите пароль"
+        "Required": "Укажите пароль"
     },
     "Invite":
     {
