Entity delete add confirm message

--- a/src/Assets/Entity/Locale/ru/Delete.json
+++ b/src/Assets/Entity/Locale/ru/Delete.json
@@ -1,7 +1,8 @@
 {
     "Confirm": "Подтвердите удаление",
     "Warning": {
-        "All": "Будут удалены все объекты!"
+        "All": "Будут удалены все объекты!",
+        "Message": "Вы уверены что хотите удалить?"
     },
     "Ok": "Удалить",
     "Cancel" : "Я передумал"
