--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -16,5 +16,6 @@
     },
     "Title": "Пользователи",
     "Today": "Регистраций сегодня",
-    "Total": "Всего"
+    "Total": "Всего",
+    "Second": "В секунду"
 }
