Journal Application. Various fixes. Locale:Get.

--- a/src/Assets/Error/Locale/ru/403.json
+++ b/src/Assets/Error/Locale/ru/403.json
@@ -1,9 +1,11 @@
 {
     "Title": "Ошибка 403",
     "Warning": {
+        "Title": "Проблема",
         "Description": "У вас нет доступа к этой странице."
     },
     "Solution": {
+        "Title": "Решение",
         "Description": "Попробовать любую другую."
     }
 }
