Various Fixes. New feature Code.Flow.API Cleanup New REQID format

--- a/src/Assets/User/Locale/en/Entity.json
+++ b/src/Assets/User/Locale/en/Entity.json
@@ -3,6 +3,7 @@
     "DOB": "Date of birth",
     "EMail": "Email",
     "Title": "Full name",
+    "APIKey": "API Key",
     "Gender": {
         "Label": "Gender",
         "U": "Unspecified",
