--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -5,6 +5,7 @@
     "EMail": "EMail",
     "Phone": "Телефон",
     "Nickname": "Никнейм",
+    "APIKey": "Ключ API",
     "Title": "Имя",
     "Biography": "Биография",
     "Photo": "Фото",
