--- a/src/Assets/PHP/Locale/ru/Control.json
+++ b/src/Assets/PHP/Locale/ru/Control.json
@@ -13,7 +13,8 @@
         "Do": "Обзор",
         "Realpath": {
             "Cache": "Realpath Cache"
-        }
+        },
+        "Globals": "_SERVERS"
     },
     "Title": "PHP",
     "Version": {
