--- a/src/Assets/Error/Locale/ru/Control.json
+++ b/src/Assets/Error/Locale/ru/Control.json
@@ -5,7 +5,8 @@
         "Do": "Обзор",
         "List": "Список",
         "Delete": "Удалить",
-        "Show": "Просмотр"
+        "Show": "Просмотр",
+        "Test": "Тест"
     },
     "Second": "За секунду",
     "Title": "Ошибки",
