--- a/src/Assets/Session/Locale/ru/Control.json
+++ b/src/Assets/Session/Locale/ru/Control.json
@@ -1,5 +1,6 @@
 {
     "Annulate": "Аннулировать",
+    "Hour": "За час",
     "Options": {
         "Do": "Обзор",
         "List": "Список сессий",
