--- a/src/Assets/User/Locale/en/Entity.json
+++ b/src/Assets/User/Locale/en/Entity.json
@@ -18,5 +18,10 @@
         "First": "Password",
         "Second": "Again",
         "Equal": "Passwords must match"
+    },
+    "Timezone":
+    {
+        "Identifier": "Timezone",
+        "Offset": "UTC Offset"
     }
 }
