--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -44,5 +44,10 @@
         "1": "Активирован",
         "-1": "Бан"
     },
-    "Create": "Зарегистрироваться"
+    "Create": "Зарегистрироваться",
+    "Timezone":
+    {
+        "Identifier": "Часовой пояс",
+        "Offset": "Смещение от UTC"
+    }
 }
