--- a/src/Assets/PHP/Locale/en/Control.json
+++ b/src/Assets/PHP/Locale/en/Control.json
@@ -11,6 +11,7 @@
         "Extensions": "Extensions",
         "Settings": "Settings",
         "Do": "Overview",
+        "Opcache": "Opcache",
         "Realpath": {
             "Cache": "Realpath Cache"
         },
