--- a/src/Assets/PHP/Locale/ru/Control.json
+++ b/src/Assets/PHP/Locale/ru/Control.json
@@ -11,6 +11,7 @@
         "Extensions": "Расширения",
         "Settings": "Настройки",
         "Do": "Обзор",
+        "Opcache": "Opcache",
         "Realpath": {
             "Cache": "Realpath Cache"
         },
