captcha for registration page; fixes

--- a/src/Assets/User/Locale/en/Error.json
+++ b/src/Assets/User/Locale/en/Error.json
@@ -21,5 +21,8 @@
     },
     "Name": {
         "Required": "Name required"
+    },
+    "CAPTCHA": {
+        "Failed": "You didn't pass CAPTCHA test" 
     }
 }
