--- a/src/Assets/User/Locale/ru/Error.json
+++ b/src/Assets/User/Locale/ru/Error.json
@@ -21,5 +21,8 @@
     },
     "Name": {
         "Required": "Укажите имя"
+    },
+    "CAPTCHA": {
+        "Failed": "Вы не прошли проверку CAPTCHA"
     }
 }
