Control Panel updates.

--- a/src/Assets/PHP/Locale/ru/Extension.json
+++ b/src/Assets/PHP/Locale/ru/Extension.json
@@ -21,6 +21,7 @@
     "gmp": "GMP",
     "hash": "Hash",
     "iconv": "Iconv",
+    "igbinary": "IGBinary",
     "imagick": "Imagick",
     "json": "JSON",
     "libxml": "XML",
