--- a/src/Assets/PHP/Locale/en/Extension.json
+++ b/src/Assets/PHP/Locale/en/Extension.json
@@ -22,6 +22,7 @@
     "hash": "Hash",
     "iconv": "Iconv",
     "imagick": "Imagick",
+    "igbinary": "IGBinary",
     "json": "JSON",
     "libxml": "XML",
     "mbstring": "MBString",
