Control.Panel fixes.

--- a/src/Assets/Control/Locale/en/Panel.json
+++ b/src/Assets/Control/Locale/en/Panel.json
@@ -5,5 +5,7 @@
         "Developer": "Developer",
         "Company": "Company"
     },
-    "Title": "Control panel"
+    "Title": "Control panel",
+    "Navigation": "Navigation",
+    "Actions": "Actions"
 }
