--- a/src/Assets/Control/Locale/ru/Panel.json
+++ b/src/Assets/Control/Locale/ru/Panel.json
@@ -7,5 +7,7 @@
         "Company": "Компания"
     },
     "Return": "Вернуться к сайту",
-    "Title": "Центр Управления"
+    "Title": "Центр Управления",
+    "Navigation": "Навигация",
+    "Actions": "Действия"
 }
